Mnemosyne 2.4.1 :

(Note: if you run into problems related to missing api-ms-win-crt-runtime-l1-1-0-dll
make sure your machine has the latest Windows patches and/or download this:

https://www.microsoft.com/en-us/download/details.aspx?id=48145

This might also help with other hard crashes.)


-Fix broken cramming plugin (reported by stevengeorg) 
-Fix encoding problems with import and export (reported by register2, 
 MarcoP, abacus).
-Fix removing tags through card browser (reported by bvauquelin).
-Fix autoscaling sometimes not working under Linux.
-Fix error related missing idna encoding when starting server 
 (reported by Andrea Giordano).


Mnemosyne 2.4 : 2016-12-05

-Upgraded all code to Python3 and PyQt5, so that Mnemosyne no longer
 depends on libraries which are gradually becoming unsupported.
-The move to PyQt5 enabled to show progress bars with percentages for
 certain long operations like initial sync.
-Improved startup speed. 
-New command line option "--high-dpi-scaling" to enable scaling for displays
 with high DPI values. Not enabled by default because it can cause some
 issues with multiple connected displays.
-Tag combobox now expands to give suggestions for tags also when using more
 than one tag (patch by Emilian Mihalache)


Android 20160502:

-Upgraded backend to Mnemosyne 2.3.6, meaning that logs older than 1 year
 are now automatically archived in a separate file, which is not backed 
 up all the time, speeding up the sync process and taking less space.
-Switched to Material design, also making it easier to access the menu on 
 some devices which had problems with this before.
-Implemented full screen immersive mode for Android KitKat and higher.
-Buttons are now in the middle of the screen to better facilitate
 ergonomic one-handed operation.


Mnemosyne 2.3.6 : 2016-05-02

-Logs older than 1 year are now automatically archived in a separate file,
 which is not backed up all the time, speeding up e.g. the sync process.